--- a/styles/style.css
+++ b/styles/style.css
@@ -53,8 +53,15 @@ ol {
   min-width: 711px;
 } 
 
+.result__video-container {
+  min-width: 711px;
+  padding-bottom: 16px;
+}
+
 .result__video {
+  object-fit: cover;
   width: 100%;
+  height: 100%;
 }
 
 .search-form {
@@ -69,4 +76,23 @@ ol {
 .content__list {
   height: 298px;
   overflow: auto;
+}
+
+.content__list-item {
+  padding-bottom: 30px;
+}
+
+.content__list-item:last-child {
+  padding-bottom: 0;
+}
+
+.content__video-card {
+  display: grid;
+  grid-template-columns: 1fr 194px;
+  align-items: start;
+}
+
+.content__video-card-thumbnail {
+  width: 194px;
+  height: 103px;
 }
