--- a/styles/style.css
+++ b/styles/style.css
@@ -85,9 +85,15 @@ ol {
   display: inline-block;
   width: fit-content;
 }
-
-.search-form__label:has(search-form__textfield:focus-visible) {
+/*
+.search-form__label:focus-visible {
   border: 1px solid #fff;
+  outline-offset: 1px;
+}
+*/
+.search-form__label:has(:focus-visible) {
+  outline: 1px solid #fff;
+  outline-offset: 1px;
 }
 
 .search-form__textfield {
@@ -108,11 +114,11 @@ ol {
 
 .search-form__textfield:focus {
   outline: 0;
-  border: 0;
 }
 
 .search-form__textfield:focus-visible {
-  border: 1px solid #fff;
+  outline: 1px solid #fff;
+  outline-offset: 1px;
 }
 
 .search-form__textfield::placeholder {
@@ -137,9 +143,18 @@ ol {
   border: 1px solid #fff;
 }
 
-.search-form__label-text:hover {
+.search-form__label:has(.search-form__label-text):hover {
   text-decoration: underline;
   cursor: pointer;
+}
+
+.search-form__checkbox[type="checkbox"]:checked + span {
+  width: 15px;
+  height: 15px;
+  background-color: #fff;
+  background-position: center;
+  outline: 1px solid #fff;
+  outline-offset: 1px;
 }
 
 .button {
@@ -157,17 +172,24 @@ ol {
   cursor: pointer;
 }
 
+button:focus-visible {
+  outline: 1px solid #fff;
+  outline-offset: 1px;
+}
+
+.button:active {
+  background-color: #545050;
+}
+
 .search-form__submit-button {
   margin-top: 20px;
   min-width: 194px;
 }
 
 .more-button {
-  min-width: 399px;
-}
-
-.content__details {
-  /* min-width: 399px; */
+  width: 399px;
+  height: 34px;
+  margin: 2px;
 }
 
 .title {
@@ -198,8 +220,27 @@ ol {
 }
 
 .content__card-link {
+  display: block;
   text-decoration: none;
-  color: #fff
+  color: #fff;
+  margin: 2px; 
+}
+
+.content__card-link:focus {
+  outline: none;
+}
+
+.content__card-link:focus-visible {
+  outline: 1px solid #fff;
+  outline-offset: 1px;
+}
+
+.content__card-link:hover {
+  text-decoration: underline;
+}
+
+.content__card-link_current {
+  background-color: #545050;
 }
 
 .content__video-card {
