--- a/styles/style.css
+++ b/styles/style.css
@@ -13,7 +13,7 @@ html {
   block-size: 100%;
   margin: auto;
   color: #fff;
-  font-family: 'Fira Sans Condensed', sans-serif;
+  font-family: "Fira Sans Condensed", sans-serif;
   font-size: 18px;
   background-color: #1b1919;
   display: flex;
@@ -51,7 +51,7 @@ ol {
 
 .result {
   min-width: 711px;
-} 
+}
 
 .result__video-container {
   min-width: 711px;
@@ -85,12 +85,7 @@ ol {
   display: inline-block;
   width: fit-content;
 }
-/*
-.search-form__label:focus-visible {
-  border: 1px solid #fff;
-  outline-offset: 1px;
-}
-*/
+
 .search-form__label:has(:focus-visible) {
   outline: 1px solid #fff;
   outline-offset: 1px;
@@ -125,7 +120,7 @@ ol {
   font-weight: 400;
   font-size: 18px;
   line-height: 21.6px;
-  color: rgba( 250, 250, 250, 0.7)
+  color: rgba(250, 250, 250, 0.7);
 }
 
 .search-form__checkbox-list {
@@ -223,7 +218,7 @@ button:focus-visible {
   display: block;
   text-decoration: none;
   color: #fff;
-  margin: 2px; 
+  margin: 2px;
 }
 
 .content__card-link:focus {
@@ -275,4 +270,3 @@ button:focus-visible {
   clip-path: inset(50%);
   white-space: nowrap;
 }
-
